# freedroid

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
scripts/: build-mtp-dmg.sh  bundle-mtp-dylibs.sh  fetch-adb.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: mtp_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  local.rs  main.rs
src-tauri/src/adb/: devices.rs  files.rs  mod.rs  transfer.rs  wifi.rs
src-tauri/src/fuse/: adbfs.rs  mod.rs
src-tauri/src/mtp/: mod.rs
src/lib/: ipc.ts  state.svelte.ts  util.ts
src/lib/components/: DevicePicker.svelte  Pane.svelte  TransferQueue.svelte  WifiDialog.svelte
src/routes/: +page.svelte
