[package]
name = "freedroid"
version = "0.1.0"
description = "Free & open-source Android file transfer for macOS"
authors = ["Freedroid contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "freedroid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Optional native MTP backend (connect without USB debugging). Off by default
# so the normal build + CI stay install-free; needs libmtp at build time.
mtp = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
pkg-config = "0.3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
